# bastion

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: bastion_demo.rs  semantic_demo.rs
src/: audit.rs  checkpoint.rs  consensus.rs  error.rs  guardrails.rs  heal.rs  lib.rs  observe.rs  prelude.rs  runtime.rs  semantic_eyes.rs  verify.rs
tests/: integration.rs
